--- a/main.html
+++ b/main.html
@@ -10,7 +10,6 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<h1>"why i want to become a developer?"</h1>
 </body>
-
-</html>
+<p>excited to learn coding solve problem and create useful software </p>
